--- a/src/searchRoom/searchRoom.pug
+++ b/src/searchRoom/searchRoom.pug
@@ -4,8 +4,6 @@ html
     meta(charset = 'utf-8')
     script(src="https://code.jquery.com/jquery-1.12.4.min.js")
     script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
-    link(rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css")
-    script(type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js")
     meta(name='viewport', content="initial-scale=1.0, width=device-width")
     title Toxin Hotel
     link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
@@ -49,10 +47,10 @@ html
             div.searchRoom__row-right-item
               include ../components/slide/slide.pug
               +slide(
-                ['../img/photo/image-1.png',
-                '../img/photo/image-2.png',
-                '../img/photo/image-3.png',
-                '../img/photo/image-4.png'],
+                ['./img/photo/image-1.png',
+                './img/photo/image-2.png',
+                './img/photo/image-3.png',
+                './img/photo/image-4.png'],
                 888,
                 '9 990₽',
                 5,
@@ -60,10 +58,10 @@ html
             div.searchRoom__row-right-item
               include ../components/slide/slide.pug
               +slide(
-                ['../img/photo/image-3.png',
-                '../img/photo/image-4.png',
-                '../img/photo/image-5.png',
-                '../img/photo/image-6.png'],
+                ['./img/photo/image-3.png',
+                './img/photo/image-4.png',
+                './img/photo/image-5.png',
+                './img/photo/image-6.png'],
                 840,
                 '9 990₽',
                 4,
@@ -71,10 +69,10 @@ html
             div.searchRoom__row-right-item
               include ../components/slide/slide.pug
               +slide(
-                ['../img/photo/image-7.png',
-                '../img/photo/image-8.png',
-                '../img/photo/image-9.png',
-                '../img/photo/image-10.png'],
+                ['./img/photo/image-7.png',
+                './img/photo/image-8.png',
+                './img/photo/image-9.png',
+                './img/photo/image-10.png'],
                 980,
                 '8 500₽',
                 3,
@@ -82,10 +80,10 @@ html
             div.searchRoom__row-right-item
               include ../components/slide/slide.pug
               +slide(
-                ['../img/photo/image-11.png',
-                '../img/photo/image-12.png',
-                '../img/photo/image-1.png',
-                '../img/photo/image-2.png'],
+                ['./img/photo/image-11.png',
+                './img/photo/image-12.png',
+                './img/photo/image-1.png',
+                './img/photo/image-2.png'],
                 856,
                 '7 300₽',
                 5,
@@ -93,10 +91,10 @@ html
             div.searchRoom__row-right-item
               include ../components/slide/slide.pug
               +slide(
-                ['../img/photo/image-3.png',
-                '../img/photo/image-4.png',
-                '../img/photo/image-5.png',
-                '../img/photo/image-6.png'],
+                ['./img/photo/image-3.png',
+                './img/photo/image-4.png',
+                './img/photo/image-5.png',
+                './img/photo/image-6.png'],
                 740,
                 '6 000₽',
                 4,
@@ -104,10 +102,10 @@ html
             div.searchRoom__row-right-item
               include ../components/slide/slide.pug
               +slide(
-                ['../img/photo/image-7.png',
-                '../img/photo/image-8.png',
-                '../img/photo/image-9.png',
-                '../img/photo/image-10.png'],
+                ['./img/photo/image-7.png',
+                './img/photo/image-8.png',
+                './img/photo/image-9.png',
+                './img/photo/image-10.png'],
                 982,
                 '5 800₽',
                 5,
@@ -115,10 +113,10 @@ html
             div.searchRoom__row-right-item
               include ../components/slide/slide.pug
               +slide(
-                ['../img/photo/image-11.png',
-                '../img/photo/image-12.png',
-                '../img/photo/image-1.png',
-                '../img/photo/image-2.png'],
+                ['./img/photo/image-11.png',
+                './img/photo/image-12.png',
+                './img/photo/image-1.png',
+                './img/photo/image-2.png'],
                 672,
                 '5 500₽',
                 5,
@@ -126,10 +124,10 @@ html
             div.searchRoom__row-right-item
               include ../components/slide/slide.pug
               +slide(
-                ['../img/photo/image-3.png',
-                '../img/photo/image-4.png',
-                '../img/photo/image-5.png',
-                '../img/photo/image-6.png'],
+                ['./img/photo/image-3.png',
+                './img/photo/image-4.png',
+                './img/photo/image-5.png',
+                './img/photo/image-6.png'],
                 450,
                 '5 300₽',
                 4,
@@ -137,10 +135,10 @@ html
             div.searchRoom__row-right-item
               include ../components/slide/slide.pug
               +slide(
-                ['../img/photo/image-7.png',
-                '../img/photo/image-8.png',
-                '../img/photo/image-9.png',
-                '../img/photo/image-10.png'],
+                ['./img/photo/image-7.png',
+                './img/photo/image-8.png',
+                './img/photo/image-9.png',
+                './img/photo/image-10.png'],
                 350,
                 '5 000₽',
                 3,
@@ -148,10 +146,10 @@ html
             div.searchRoom__row-right-item
               include ../components/slide/slide.pug
               +slide(
-                ['../img/photo/image-7.png',
-                '../img/photo/image-8.png',
-                '../img/photo/image-9.png',
-                '../img/photo/image-10.png'],
+                ['./img/photo/image-7.png',
+                './img/photo/image-8.png',
+                './img/photo/image-9.png',
+                './img/photo/image-10.png'],
                 666,
                 '5 000₽',
                 5,
@@ -159,10 +157,10 @@ html
             div.searchRoom__row-right-item
               include ../components/slide/slide.pug
               +slide(
-                ['../img/photo/image-7.png',
-                '../img/photo/image-8.png',
-                '../img/photo/image-9.png',
-                '../img/photo/image-10.png'],
+                ['./img/photo/image-7.png',
+                './img/photo/image-8.png',
+                './img/photo/image-9.png',
+                './img/photo/image-10.png'],
                 444,
                 '5 000₽',
                 3,
@@ -170,10 +168,10 @@ html
             div.searchRoom__row-right-item
               include ../components/slide/slide.pug
               +slide(
-                ['../img/photo/image-7.png',
-                '../img/photo/image-8.png',
-                '../img/photo/image-9.png',
-                '../img/photo/image-10.png'],
+                ['./img/photo/image-7.png',
+                './img/photo/image-8.png',
+                './img/photo/image-9.png',
+                './img/photo/image-10.png'],
                 352,
                 '5 000₽',
                 3,
