--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -26,9 +26,9 @@ mixin footer()
         span.footer__ico-text Copyright © 2018 Toxin отель. Все права зачищены.  
         span.footer__icons
           a(href="https://twitter.com/?lang=ru")
-            img(src="../../img/footerIcon/t.svg", alt="twitter")   
+            img(src="./img/footerIcon/t.svg", alt="twitter")   
           a(href="https://ru-ru.facebook.com/")   
-            img(src="../../img/footerIcon/f.svg", alt="facebook")   
+            img(src="./img/footerIcon/f.svg", alt="facebook")   
           a(href="https://www.instagram.com/?hl=ru")   
-            img(src="../../img/footerIcon/i.svg", alt="instagram")   
+            img(src="./img/footerIcon/i.svg", alt="instagram")   
 
