--- a/src/components/head/head.pug
+++ b/src/components/head/head.pug
@@ -12,7 +12,7 @@ mixin head(name)
   header.head
     div(class='head__item '+className)
       a(href='index.html').head__link
-        img(src="../../img/Logo.svg", alt="")
+        img(src="./img/Logo.svg", alt="")
       ul.head__list
         +headItem('О нас','head__link_bold','colorAndType.html')
         +headItem('Услуги','','formElements.html',true)
