--- a/src/index/index.scss
+++ b/src/index/index.scss
@@ -4,7 +4,7 @@
   margin: 0px auto;
   padding: 70px 151px 20px 140px;
   position: relative;
-  background: url('../img/backgrond/index.png')no-repeat;
+  background: url('../img/index.png')no-repeat;
   &__text{
     color: rgba(31, 32, 65, 0.75);
     position: absolute;
