--- a/src/registration/registration.scss
+++ b/src/registration/registration.scss
@@ -5,5 +5,5 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: url('../img/backgrond/signIN.png')no-repeat 50%;
+  background: url('../img/signIN.png')no-repeat 50%;
 }
