--- a/src/uikit-page/formElements/formElements.pug
+++ b/src/uikit-page/formElements/formElements.pug
@@ -98,7 +98,7 @@ html
             +richCheckboxBtn('rich Checkbox Buttons','Широкий коридор','Ширина коридоров в номере</br> не менее 91 см.')
           div.formElements__row-checkbox-item
             include ../../components/commentary/commentary.pug
-            +commentary('Мурад Сарафанов','5 дней назад','Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.')
+            +commentary('Мурад Сарафанов','5 дней назад','Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.','./img/man.png')
         div.formElements__row-btn
           div.formElements__row-btn-item
             include ../../components/range-slider/range-slider.pug
