--- a/src/components/buttons/buttons.scss
+++ b/src/components/buttons/buttons.scss
@@ -49,6 +49,7 @@
   border-radius: 22px;
   font-size: 12px;
   position: relative;
+  width: 100%;
   &::before{
     content: '';
     width: 44px;
