--- a/src/searchRoom/searchRoom.pug
+++ b/src/searchRoom/searchRoom.pug
@@ -47,7 +47,7 @@ html
             div.searchRoom__row-right-item
               include ../components/slide/slide.pug
               +slide(
-                ['./img/photo/image-1.png',
+                ['./img/roomDetail/image.png',
                 './img/photo/image-2.png',
                 './img/photo/image-3.png',
                 './img/photo/image-4.png'],
@@ -82,7 +82,7 @@ html
               +slide(
                 ['./img/photo/image-11.png',
                 './img/photo/image-12.png',
-                './img/photo/image-1.png',
+                './img/roomDetail/image.png',
                 './img/photo/image-2.png'],
                 856,
                 '7 300₽',
@@ -115,7 +115,7 @@ html
               +slide(
                 ['./img/photo/image-11.png',
                 './img/photo/image-12.png',
-                './img/photo/image-1.png',
+                './img/roomDetail/image.png',
                 './img/photo/image-2.png'],
                 672,
                 '5 500₽',
