--- a/src/uikit-page/cards/cards.pug
+++ b/src/uikit-page/cards/cards.pug
@@ -40,7 +40,7 @@ html
         div.cards__right-colum-item
           include ../../components/slide/slide.pug
           +slide(
-            ['./img/photo/image-1.png',
+            ['./img/roomDetail/image.png',
             './img/photo/image-2.png',
             './img/photo/image-3.png',
             './img/photo/image-4.png'],
