--- a/src/components/bullet-list/bullet-list.pug
+++ b/src/components/bullet-list/bullet-list.pug
@@ -1,11 +1,17 @@
-mixin bullet-listItem(text)
-  div.bullet-list__item!=text
+mixin bullet-list (options)
+  - 
+    const { 
+      title = 'Правила',
+      list = [
+        "Нельзя с питомцами",
+        "Без вечеринок и мероприятий",
+        "Время прибытия — после 13:00,</br>а выезд до 12:00",
+      ], 
+    } = options;
 
-
-mixin bullet-list(title)
-  section.bullet-list
-    div.bullet-list__title=title 
+  div.bullet-list__title=title
     div.bullet-list__items
-      +bullet-listItem('Нельзя с питомцами')
-      +bullet-listItem('Без вечеринок и мероприятий')
-      +bullet-listItem('Время прибытия — после 13:00,</br>а выезд до 12:00')
+    -for(let item of list)
+      div.bullet-list__item!=item
+
+
