--- a/src/components/sign-in/sign-in.pug
+++ b/src/components/sign-in/sign-in.pug
@@ -3,16 +3,16 @@ mixin sign-in()
     div.sign-in__title Войти
     div.sign-in__item
       include ../input-form/input-form.pug
-      +input-form('','','Email')
+      +input-form({placeholder:'Email'})
     div.sign-in__item
       include ../input-form/input-form.pug
-      +input-form('','','Пароль')
+      +input-form({placeholder:'Пароль'})
     div.sign-in__item
       include ../buttons/buttons.pug
-      +btnForm('Войти')
+      +buttons('Войти','btnForm')
     div.sign-in__item
       span.sign-in__item-text Нет аккаунта на Toxin?
       include ../buttons/buttons.pug
-      +btnWithBorder('создать')
+      +buttons('создать','withBorder')
 
 
