--- a/src/uikit-page/header-and-footer/header-and-footer.pug
+++ b/src/uikit-page/header-and-footer/header-and-footer.pug
@@ -21,8 +21,7 @@ html
     section.header-and-footer
       div.header-and-footer__wrap
         div.header-and-footer__item
-          +head('')
+          +head()
         div.header-and-footer__item
-          +head('Юлий Цезарь')
+          +head({nameUser:'Юлий Цезарь'})
         div.header-and-footer__item
-          +footer()
