--- a/src/uikit-page/form-elements/form-elements.pug
+++ b/src/uikit-page/form-elements/form-elements.pug
@@ -23,16 +23,23 @@ html
               span.form-elements__row-input-title Text Field
               span.form-elements__row-input-subTitle Default
             include ../../components/input-form/input-form.pug
-            +input-form('','')
+            +input-form()
           div.form-elements__row-input-item
             div.form-elements__row-input-text
               span.form-elements__row-input-title Text Field
               span.form-elements__row-input-subTitle Hover&nbsp;/&nbsp;Focus
             include ../../components/input-form/input-form.pug
-            +input-form('input-form_active','This is pretty awesome')
+            +input-form({className:'input-form_active',value:'This is pretty awesome'})
           div.form-elements__row-input-item
             include ../../components/drop-down/drop-down.pug
-            +drop-down('','drop-down')
+            +drop-down({ 
+              title : 'drop-down',
+              list : [
+                "взрослые",
+                "дети",
+                "младенцы",
+              ], 
+            })            
           div.form-elements__row-input-item
             div.form-elements__row-input-text
             include ../../components/input-form-mask/input-form-mask.pug
@@ -41,7 +48,7 @@ html
             div.form-elements__row-input-text
               span.form-elements__row-input-title date drop-down
             include ../../components/data-drop-down/data-drop-down.pug
-            +data-drop-down()
+            +data-drop-down-filter()
           div.form-elements__row-input-item
             include ../../components/data-drop-down/data-drop-down.pug
             +data-drop-down-filter('filter date drop-down')
@@ -49,34 +56,50 @@ html
             div.form-elements__row-input-text
               span.form-elements__row-input-title subscription text field
             include ../../components/input-form/input-form.pug
-            +input-formEmail()
+            +input-form({isForm : true})
           div.form-elements__row-input-item
             div.form-elements__row-input-text
               span.form-elements__row-input-title drop-down
               span.form-elements__row-input-subTitle Default
             include ../../components/drop-down-bed/drop-down-bed.pug
-            +drop-down-bed('')
+            +drop-down-bed()
           div.form-elements__row-input-item
             div.form-elements__row-input-text
               span.form-elements__row-input-title drop-down
               span.form-elements__row-input-subTitle expanded
             include ../../components/drop-down-bed/drop-down-bed.pug
-            +drop-down-bed('drop-down-bed__body_show')
+            +drop-down-bed({className : 'drop-down-bed__body_show'})
           div.form-elements__row-input-item
             include ../../components/checkbox-list/checkbox-list.pug
             +checkbox-list()
           div.form-elements__row-input-item
-            +checkbox-list('checkbox-list__items_show','checkbox-list__titleBtn_rotate')
+            +checkbox-list({show:'checkbox-list__items_show',
+                            rotate:'checkbox-list__titleBtn_rotate',
+                            title:'',
+                            items : [
+                              {text:'Завтрак',flag:false},
+                              {text:'Письменный стол',flag:false},
+                              {text:'Стул для кормления',flag:true},
+                              {text:'Кроватка',flag:true},
+                              {text:'Телевизор',flag:false},
+                              {text:'Шампунь',flag:false},
+                            ]})
           div.form-elements__row-input-item
             include ../../components/text-list/text-list.pug
-            +smile()
-            +city()
+            +comfortList()
         div.form-elements__row-checkbox
           div.form-elements__row-checkbox-item
-            +checkboxButtons('Checkbox Buttons')
+            +checkbox-list({
+                isList:false,
+                title:'Checkbox Buttons',
+                items : [
+                  {text:'Можно курить',flag:false},
+                  {text:'Можно с питомцами',flag:true},
+                  {text:'Можно пригласить гостей</br> (до 10 человек)',flag:true},
+                ]})
           div.form-elements__row-checkbox-item
             include ../../components/radio-buttons/radio-buttons.pug
-            +radio-buttons('Radio Buttons')
+            +radio-buttons({title : 'Radio Buttons'})
           div.form-elements__row-checkbox-item
             div.form-elements__row-checkbox-item-title Toggle
             include ../../components/toggle/toggle.pug
@@ -92,10 +115,18 @@ html
             +rate-btn('4')
           div.form-elements__row-checkbox-item
             include ../../components/drop-down/drop-down.pug
-            +drop-down('drop-down__body_show','drop-down')
+            +drop-down({
+              className : 'drop-down__body_show', 
+              title : 'drop-down',
+              list : [
+                "взрослые",
+                "дети",
+                "младенцы",
+              ], 
+            }) 
           div.form-elements__row-checkbox-item
             include ../../components/rich-checkbox-btn/rich-checkbox-btn.pug
-            +rich-checkbox-btn('rich Checkbox Buttons','Широкий коридор','Ширина коридоров в номере</br> не менее 91 см.')
+            +rich-checkbox-btn({title:'RICH CHECKBOX BUTTONS'})
           div.form-elements__row-checkbox-item
             include ../../components/commentary/commentary.pug
             +commentary('Мурад Сарафанов','5 дней назад','Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.','./img/man.png')
@@ -106,23 +137,31 @@ html
           div.form-elements__row-btn-item
             div.form-elements__row-btn-item-title buttons
             include ../../components/buttons/buttons.pug
-            +btnWithBackColor('CLICK ME')
+            +buttons('CLICK ME','withBackColor')
           div.form-elements__row-btn-item
             include ../../components/buttons/buttons.pug
-            +btnWithBorder('CLICK ME')
+            +buttons('CLICK ME','withBorder')
           div.form-elements__row-btn-item
             include ../../components/buttons/buttons.pug
-            +btnJustName('CLICK ME')
+            +buttons('CLICK ME','justBtn')
           div.form-elements__row-btn-item
             include ../../components/buttons/buttons.pug
-            +btnForm('перейти к оплате')
+            +buttons('перейти к оплате','btnForm')
           div.form-elements__row-btn-item
             div.form-elements__row-btn-item-title pagination
             include ../../components/pagination/pagination.pug
             +pagination()
           div.form-elements__row-btn-item
             include ../../components/drop-down/drop-down.pug
-            +drop-down('drop-down__body_show','drop-down') 
+            +drop-down({
+              className : 'drop-down__body_show', 
+              title : 'drop-down',
+              list : [
+                "взрослые",
+                "дети",
+                "младенцы",
+              ], 
+            }) 
           div.form-elements__row-btn-item
             div.form-elements__row-btn-item-title bullet list
             include ../../components/bullet-list/bullet-list.pug
