--- a/src/components/input-form-mask/input-form-mask.pug
+++ b/src/components/input-form-mask/input-form-mask.pug
@@ -1,4 +1,4 @@
 mixin input-form-mask(title)
-  section.input-form-mask
+  section.input-form-mask.js-input-form-mask
     div.input-form-mask__title=title
-    input(class='input-form-masked__input' type="text" placeholder="ДД.ММ.ГГГГ" maxlength=10)
+    input(class='input-form-masked__input js-input-form-masked__input' type="text" placeholder="ДД.ММ.ГГГГ" maxlength=10)
