--- a/src/components/checkbox-list/checkbox-list.pug
+++ b/src/components/checkbox-list/checkbox-list.pug
@@ -15,9 +15,9 @@ mixin checkbox-list(options={})
       ]
     } = options;
   if(isList)  
-    section.checkbox-list
-      button(class='checkbox-list__titleBtn '+ rotate id='checkbox-listBtn')=title
-      ul(class='checkbox-list__items '+ show)
+    section.checkbox-list.js-checkbox-list
+      button(class='checkbox-list__titleBtn js-checkbox-list__titleBtn '+ rotate )=title
+      ul(class='checkbox-list__items js-checkbox-list__items '+ show)
         -for(let {text,flag} of items)
           li.checkbox-list__item 
             label(class='checkbox-list__item-check') 
