--- a/src/components/like-button/like-button.pug
+++ b/src/components/like-button/like-button.pug
@@ -1,3 +1,3 @@
 mixin like-button(count,className)
-  section(class='like-button ' + className)
-    div.like-button__count=count
+  section(class='like-button js-like-button ' + className)
+    div.like-button__count.js-like-button__count=count
