--- a/src/components/rate-btn/rate-btn.pug
+++ b/src/components/rate-btn/rate-btn.pug
@@ -1,7 +1,7 @@
 mixin rate-btn(number)
-  div(class='rating' data-total-value=number)
-    div(class='rating__item' data-item-value='5') 
-    div(class='rating__item' data-item-value='4') 
-    div(class='rating__item' data-item-value='3') 
-    div(class='rating__item' data-item-value='2') 
-    div(class='rating__item' data-item-value='1') 
+  div(class='rating js-rating' data-total-value=number)
+    div(class='rating__item js-rating__item' data-item-value='5') 
+    div(class='rating__item js-rating__item' data-item-value='4') 
+    div(class='rating__item js-rating__item' data-item-value='3') 
+    div(class='rating__item js-rating__item' data-item-value='2') 
+    div(class='rating__item js-rating__item' data-item-value='1') 
